--- a/projects/project 2/css/main.css
+++ b/projects/project 2/css/main.css
@@ -1,546 +1,295 @@
-body {
-  
-  background: -webkit-linear-gradient(top, #cee7d4 0%, #f5f4c9 100%);
-  background: linear-gradient(to bottom, #cee7d4 0%, #f5f4c9 100%);
-  height: 2500px;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-
+.container {
+  position: relative;
+  width: 400px;
+  height: 450px;
+  margin: 40px auto;
 }
-.supreme {
+
+.cube {
   position: absolute;
+  width: 35px;
+  height: 35px;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
   top: 50px;
-  left: 200px;
-  width: 1000px;
-  height: 1500px;
-  
+  left: 50px;
+  -webkit-transform: rotateX(-15deg) rotateY(-45deg);
+          transform: rotateX(-15deg) rotateY(-45deg);
+}
+
+.cube div {
+  position: absolute;
+  width: 35px;
+  height: 35px;
+
+  overflow: hidden;
+}
+
+.back {
+  -webkit-transform: translateZ(-37.5px) rotateY(180deg);
+          transform: translateZ(-37.5px) rotateY(180deg);
 }
 
 .right {
- 
-  position: absolute;
-  top: 50px;
-  left: 54px;
- 
+  -webkit-transform: rotateY(-270deg) translateX(37.5px);
+          transform: rotateY(-270deg) translateX(37.5px);
+  -webkit-transform-origin: top right;
+          transform-origin: top right;
 }
-.cube {
-  width: 20px;
-  height: 20px;
-  -webkit-transform-origin: 0 0;
-          transform-origin: 0 0;
-}
-.fork {
-  position: absolute;
-  top: 75px;
-  left: 97px;
-  background-color: pink;
 
+.left {
+  -webkit-transform: rotateY(270deg) translateX(-37.5px);
+          transform: rotateY(270deg) translateX(-37.5px);
+  -webkit-transform-origin: center left;
+          transform-origin: center left;
 }
+
 .top {
-  background-color: #b9dd70;
-  -webkit-transform: rotate(210deg) skew(-30deg) scaleY(0.864);
-          transform: rotate(210deg) skew(-30deg) scaleY(0.864);
+  -webkit-transform: rotateX(-90deg) translateY(-37.5px);
+          transform: rotateX(-90deg) translateY(-37.5px);
+  -webkit-transform-origin: top center;
+          transform-origin: top center;
 }
+
+.bottom {
+  -webkit-transform: rotateX(90deg) translateY(37.5px);
+          transform: rotateX(90deg) translateY(37.5px);
+  -webkit-transform-origin: bottom center;
+          transform-origin: bottom center;
+}
+
 .front {
-  height: 160px;
-  background: #83d281;
-  -webkit-transform: rotate(-30deg) skewX(-30deg) translate(0, -17px) scaleY(0.864);
-          transform: rotate(-30deg) skewX(-30deg) translate(0, -17px) scaleY(0.864);
+  -webkit-transform: rotateY(0) translateZ(37.5px);
+          transform: rotateY(0) translateZ(37.5px);
 }
 
-.sider {
-
-  width: 160px;
-  background: #6aaf96;
-  -webkit-transform: rotate(90deg) skewX(-30deg) scaleY(0.864) translate(-180px, 0);
-          transform: rotate(90deg) skewX(-30deg) scaleY(0.864) translate(-180px, 0);
-}
-.fork .front {
-  height: 25px;
-}
-.fork .sider {
-	width: 25px;
+.cube:first-child {
+  top: 50px;
+  z-index: 120;
 }
 
-
-
-.view {
-  float: top;
-  height: 400px;
-  width: 400px;
-  -webkit-box-flex: 0;
-  -webkit-flex: 0 0 400px;
-      -ms-flex: 0 0 400px;
-          flex: 0 0 400px;
-
-}
-.axis,
-.collection,
-.scale,
-.side {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+.cube:nth-child(2) {
+  top: 120px;
+  z-index: 110;
 }
 
-
-
-.axis {
-  -webkit-transform: rotate(30deg) rotateY(-35deg) rotateX(45deg);
-          transform: rotate(30deg) rotateY(-35deg) rotateX(45deg);
-}
-.axis, .axis * {
-  -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
+.cube:nth-child(3) {
+  top: 190px;
+  z-index: 100;
 }
 
-.anicube {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin: -100px;
-  height: 200px;
-  width: 200px;
-  -webkit-transform: translateZ(-100px);
-          transform: translateZ(-100px);
-}
-.anicube:nth-child(1) {
-  color: #d4f7f7;
-}
-.anicube:nth-child(2) {
-  color: #d4f7f7;
-}
-.anicube:nth-child(3) {
-  color: #d4f7f7;
-}
-.anicube:nth-child(4) {
-  color: #d4f7f7;
-}
-.anicube:nth-child(5) {
-  color: #d4f7f7;
-}
-.anicube:nth-child(6) {
-  color: #d4f7f7;
+.cube:nth-child(4) {
+  top: 260px;
+  z-index: 90;
 }
 
-.side {
-  -webkit-transform-origin: 100% 100%;
-          transform-origin: 100% 100%;
-  background-color: currentColor;
-}
-.side:nth-child(3) {
-  -webkit-transform: translateZ(200px);
-          transform: translateZ(200px);
-}
-.side:nth-child(1) {
-  background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1));
-  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1));
-  -webkit-transform: rotate3d(0, -1, 0, -90deg);
-          transform: rotate3d(0, -1, 0, -90deg);
-}
-.side:nth-child(2) {
-  background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2));
-  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2));
-  -webkit-transform: rotate3d(1, 0, 0, -90deg);
-          transform: rotate3d(1, 0, 0, -90deg);
-}
-.scale {
-  -webkit-transform-origin: 200px 200px -200px;
-          transform-origin: 200px 200px -200px;
-  -webkit-animation: move 10s linear infinite, switch 10s steps(2) infinite;
-          animation: move 10s linear infinite, switch 10s steps(2) infinite;
-}
-.anicube:nth-child(1) .scale {
-  -webkit-animation-delay: 0s;
-          animation-delay: 0s;
-}
-.anicube:nth-child(2) .scale {
-  -webkit-animation-delay: -0.55s;
-          animation-delay: -0.55s;
-}
-.anicube:nth-child(3) .scale {
-  -webkit-animation-delay: -1.1s;
-          animation-delay: -1.1s;
-}
-.anicube:nth-child(4) .scale {
-  -webkit-animation-delay: -1.65s;
-          animation-delay: -1.65s;
-}
-.anicube:nth-child(5) .scale {
-  -webkit-animation-delay: -2.2s;
-          animation-delay: -2.2s;
-}
-.anicube:nth-child(6) .scale {
-  -webkit-animation-delay: -2.75s;
-          animation-delay: -2.75s;
+.cube:nth-child(5) {
+  top: 330px;
+  z-index: 80;
 }
 
-@-webkit-keyframes move {
-  0%,
-    10% {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-            transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-  }
-  5% {
-    -webkit-transform: scaleX(0.2) scaleY(1) scaleZ(0.2);
-            transform: scaleX(0.2) scaleY(1) scaleZ(0.2);
-  }
-  10%,
-    20% {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-            transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-  }
-  15% {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) scaleZ(1);
-            transform: scaleX(0.2) scaleY(0.2) scaleZ(1);
-  }
-  20%,
-    30% {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-            transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-  }
-  25% {
-    -webkit-transform: scaleX(1) scaleY(0.2) scaleZ(0.2);
-            transform: scaleX(1) scaleY(0.2) scaleZ(0.2);
-  }
-  30%,
-    40% {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-            transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-  }
-  35% {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) scaleZ(1);
-            transform: scaleX(0.2) scaleY(0.2) scaleZ(1);
-  }
-  40%,
-    50% {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-            transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-  }
-  45% {
-    -webkit-transform: scaleX(0.2) scaleY(1) scaleZ(0.2);
-            transform: scaleX(0.2) scaleY(1) scaleZ(0.2);
-  }
-  50%,
-    60% {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-            transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-  }
-  55% {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) scaleZ(1);
-            transform: scaleX(0.2) scaleY(0.2) scaleZ(1);
-  }
-  60%,
-    70% {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-            transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-  }
-  65% {
-    -webkit-transform: scaleX(0.2) scaleY(1) scaleZ(0.2);
-            transform: scaleX(0.2) scaleY(1) scaleZ(0.2);
-  }
-  70%,
-    80% {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-            transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-  }
-  75% {
-    -webkit-transform: scaleX(1) scaleY(0.2) scaleZ(0.2);
-            transform: scaleX(1) scaleY(0.2) scaleZ(0.2);
-  }
-  80%,
-    90% {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-            transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-  }
-  85% {
-    -webkit-transform: scaleX(0.2) scaleY(1) scaleZ(0.2);
-            transform: scaleX(0.2) scaleY(1) scaleZ(0.2);
-  }
-  90%,
-    100% {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-            transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-  }
-  95% {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) scaleZ(1);
-            transform: scaleX(0.2) scaleY(0.2) scaleZ(1);
-  }
+.cube:nth-child(6) {
+  top: 295px;
+  left: 110px;
+  z-index: 70;
 }
 
-@keyframes move {
-  0%,
-    10% {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-            transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-  }
-  5% {
-    -webkit-transform: scaleX(0.2) scaleY(1) scaleZ(0.2);
-            transform: scaleX(0.2) scaleY(1) scaleZ(0.2);
-  }
-  10%,
-    20% {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-            transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-  }
-  15% {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) scaleZ(1);
-            transform: scaleX(0.2) scaleY(0.2) scaleZ(1);
-  }
-  20%,
-    30% {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-            transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-  }
-  25% {
-    -webkit-transform: scaleX(1) scaleY(0.2) scaleZ(0.2);
-            transform: scaleX(1) scaleY(0.2) scaleZ(0.2);
-  }
-  30%,
-    40% {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-            transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-  }
-  35% {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) scaleZ(1);
-            transform: scaleX(0.2) scaleY(0.2) scaleZ(1);
-  }
-  40%,
-    50% {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-            transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-  }
-  45% {
-    -webkit-transform: scaleX(0.2) scaleY(1) scaleZ(0.2);
-            transform: scaleX(0.2) scaleY(1) scaleZ(0.2);
-  }
-  50%,
-    60% {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-            transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-  }
-  55% {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) scaleZ(1);
-            transform: scaleX(0.2) scaleY(0.2) scaleZ(1);
-  }
-  60%,
-    70% {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-            transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-  }
-  65% {
-    -webkit-transform: scaleX(0.2) scaleY(1) scaleZ(0.2);
-            transform: scaleX(0.2) scaleY(1) scaleZ(0.2);
-  }
-  70%,
-    80% {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-            transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-  }
-  75% {
-    -webkit-transform: scaleX(1) scaleY(0.2) scaleZ(0.2);
-            transform: scaleX(1) scaleY(0.2) scaleZ(0.2);
-  }
-  80%,
-    90% {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-            transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-  }
-  85% {
-    -webkit-transform: scaleX(0.2) scaleY(1) scaleZ(0.2);
-            transform: scaleX(0.2) scaleY(1) scaleZ(0.2);
-  }
-  90%,
-    100% {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-            transform: scaleX(0.2) scaleY(0.2) scaleZ(0.2);
-  }
-  95% {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) scaleZ(1);
-            transform: scaleX(0.2) scaleY(0.2) scaleZ(1);
-  }
+.cube:nth-child(7) {
+  top: 260px;
+  left: 170px;
+  z-index: 60;
 }
-@-webkit-keyframes switch {
-  0.001% {
-    -webkit-transform-origin: 0px 200px 0px;
-            transform-origin: 0px 200px 0px;
-  }
-  10% {
-    -webkit-transform-origin: 0px -200px 0px;
-            transform-origin: 0px -200px 0px;
-  }
-  10.001% {
-    -webkit-transform-origin: 0px 0px 0px;
-            transform-origin: 0px 0px 0px;
-  }
-  20% {
-    -webkit-transform-origin: 0px 0px 400px;
-            transform-origin: 0px 0px 400px;
-  }
-  20.001% {
-    -webkit-transform-origin: 0px 0px 200px;
-            transform-origin: 0px 0px 200px;
-  }
-  30% {
-    -webkit-transform-origin: 400px 0px 200px;
-            transform-origin: 400px 0px 200px;
-  }
-  30.001% {
-    -webkit-transform-origin: 200px 0px 200px;
-            transform-origin: 200px 0px 200px;
-  }
-  40% {
-    -webkit-transform-origin: 200px 0px -200px;
-            transform-origin: 200px 0px -200px;
-  }
-  40.001% {
-    -webkit-transform-origin: 200px 0px 0px;
-            transform-origin: 200px 0px 0px;
-  }
-  50% {
-    -webkit-transform-origin: 200px 400px 0px;
-            transform-origin: 200px 400px 0px;
-  }
-  50.001% {
-    -webkit-transform-origin: 200px 200px 0px;
-            transform-origin: 200px 200px 0px;
-  }
-  60% {
-    -webkit-transform-origin: 200px 200px 400px;
-            transform-origin: 200px 200px 400px;
-  }
-  60.001% {
-    -webkit-transform-origin: 200px 200px 200px;
-            transform-origin: 200px 200px 200px;
-  }
-  70% {
-    -webkit-transform-origin: 200px -200px 200px;
-            transform-origin: 200px -200px 200px;
-  }
-  70.001% {
-    -webkit-transform-origin: 200px 0px 200px;
-            transform-origin: 200px 0px 200px;
-  }
-  80% {
-    -webkit-transform-origin: -200px 0px 200px;
-            transform-origin: -200px 0px 200px;
-  }
-  80.001% {
-    -webkit-transform-origin: 0px 0px 200px;
-            transform-origin: 0px 0px 200px;
-  }
-  90% {
-    -webkit-transform-origin: 0px 400px 200px;
-            transform-origin: 0px 400px 200px;
-  }
-  90.001% {
-    -webkit-transform-origin: 0px 200px 200px;
-            transform-origin: 0px 200px 200px;
-  }
-  100%, 0% {
-    -webkit-transform-origin: 0px 200px -200px;
-            transform-origin: 0px 200px -200px;
-  }
-}
-@keyframes switch {
-  0.001% {
-    -webkit-transform-origin: 0px 200px 0px;
-            transform-origin: 0px 200px 0px;
-  }
-  10% {
-    -webkit-transform-origin: 0px -200px 0px;
-            transform-origin: 0px -200px 0px;
-  }
-  10.001% {
-    -webkit-transform-origin: 0px 0px 0px;
-            transform-origin: 0px 0px 0px;
-  }
-  20% {
-    -webkit-transform-origin: 0px 0px 400px;
-            transform-origin: 0px 0px 400px;
-  }
-  20.001% {
-    -webkit-transform-origin: 0px 0px 200px;
-            transform-origin: 0px 0px 200px;
-  }
-  30% {
-    -webkit-transform-origin: 400px 0px 200px;
-            transform-origin: 400px 0px 200px;
-  }
-  30.001% {
-    -webkit-transform-origin: 200px 0px 200px;
-            transform-origin: 200px 0px 200px;
-  }
-  40% {
-    -webkit-transform-origin: 200px 0px -200px;
-            transform-origin: 200px 0px -200px;
-  }
-  40.001% {
-    -webkit-transform-origin: 200px 0px 0px;
-            transform-origin: 200px 0px 0px;
-  }
-  50% {
-    -webkit-transform-origin: 200px 400px 0px;
-            transform-origin: 200px 400px 0px;
-  }
-  50.001% {
-    -webkit-transform-origin: 200px 200px 0px;
-            transform-origin: 200px 200px 0px;
-  }
-  60% {
-    -webkit-transform-origin: 200px 200px 400px;
-            transform-origin: 200px 200px 400px;
-  }
-  60.001% {
-    -webkit-transform-origin: 200px 200px 200px;
-            transform-origin: 200px 200px 200px;
-  }
-  70% {
-    -webkit-transform-origin: 200px -200px 200px;
-            transform-origin: 200px -200px 200px;
-  }
-  70.001% {
-    -webkit-transform-origin: 200px 0px 200px;
-            transform-origin: 200px 0px 200px;
-  }
-  80% {
-    -webkit-transform-origin: -200px 0px 200px;
-            transform-origin: -200px 0px 200px;
-  }
-  80.001% {
-    -webkit-transform-origin: 0px 0px 200px;
-            transform-origin: 0px 0px 200px;
-  }
-  90% {
-    -webkit-transform-origin: 0px 400px 200px;
-            transform-origin: 0px 400px 200px;
-  }
-  90.001% {
-    -webkit-transform-origin: 0px 200px 200px;
-            transform-origin: 0px 200px 200px;
-  }
-  100%, 0% {
-    -webkit-transform-origin: 0px 200px -200px;
-            transform-origin: 0px 200px -200px;
-  }
-}
-.image {
-  
-  width: 1000px;
-  height: 500px;
-  top: 1000px;
 
+.cube:nth-child(8) {
+  top: 225px;
+  left: 230px;
+  z-index: 50;
 }
+
+.cube:nth-child(9) {
+  top: 190px;
+  left: 290px;
+  z-index: 40;
+}
+
+.cube:nth-child(10) {
+  top: 155px;
+  left: 230px;
+  z-index: 30;
+}
+
+.cube:nth-child(11) {
+  top: 120px;
+  left: 170px;
+  z-index: 20;
+}
+
+.cube:nth-child(12) {
+  top: 85px;
+  left: 110px;
+  z-index: 140;
+}
+
+.cube:nth-child(13) {
+  top: 85px;
+  left: 110px;
+  z-index: 10;
+}
+
+.cube:nth-child(1) div {
+  background-color: #19fc19;
+}
+
+.cube:nth-child(1) .right {
+  background-color: #02ad02;
+}
+
+.cube:nth-child(1) .front {
+  background-color: #03d503;
+}
+
+.cube:nth-child(2) div {
+  background-color: #19fc8b;
+}
+
+.cube:nth-child(2) .right {
+  background-color: #02ad58;
+}
+
+.cube:nth-child(2) .front {
+  background-color: #03d56c;
+}
+
+.cube:nth-child(3) div {
+  background-color: #19fcfc;
+}
+
+.cube:nth-child(3) .right {
+  background-color: #02adad;
+}
+
+.cube:nth-child(3) .front {
+  background-color: #03d5d5;
+}
+
+.cube:nth-child(4) div {
+  background-color: #198bfc;
+}
+
+.cube:nth-child(4) .right {
+  background-color: #0258ad;
+}
+
+.cube:nth-child(4) .front {
+  background-color: #036cd5;
+}
+
+.cube:nth-child(5) div {
+  background-color: #1974fc;
+}
+
+.cube:nth-child(5) .right {
+  background-color: #0247ad;
+}
+
+.cube:nth-child(5) .front {
+  background-color: #0357d5;
+}
+
+.cube:nth-child(6) div {
+  background-color: #8b19fc;
+}
+
+.cube:nth-child(6) .right {
+  background-color: #5802ad;
+}
+
+.cube:nth-child(6) .front {
+  background-color: #6c03d5;
+}
+
+.cube:nth-child(7) div {
+  background-color: #fc19fc;
+}
+
+.cube:nth-child(7) .right {
+  background-color: #ad02ad;
+}
+
+.cube:nth-child(7) .front {
+  background-color: #d503d5;
+}
+
+.cube:nth-child(8) div {
+  background-color: #fc198b;
+}
+
+.cube:nth-child(8) .right {
+  background-color: #ad0258;
+}
+
+.cube:nth-child(8) .front {
+  background-color: #d5036c;
+}
+
+.cube:nth-child(9) div {
+  background-color: #fc1919;
+}
+
+.cube:nth-child(9) .right {
+  background-color: #ad0202;
+}
+
+.cube:nth-child(9) .front {
+  background-color: #d50303;
+}
+
+.cube:nth-child(10) div {
+  background-color: #fc8b19;
+}
+
+.cube:nth-child(10) .right {
+  background-color: #ad5802;
+}
+
+.cube:nth-child(10) .front {
+  background-color: #d56c03;
+}
+
+.cube:nth-child(11) div {
+  background-color: #fcfc19;
+}
+
+.cube:nth-child(11) .right {
+  background-color: #adad02;
+}
+
+.cube:nth-child(11) .front {
+  background-color: #d5d503;
+}
+
+.cube:nth-child(12) div {
+  background-color: #8bfc19;
+}
+
+.cube:nth-child(12) .right {
+  background-color: #58ad02;
+}
+
+.cube:nth-child(12) .front {
+  background-color: #6cd503;
+}
+
+.cube:nth-child(13) div {
+  background-color: #8bfc19;
+}
+
+.cube:nth-child(13) .right {
+  background-color: #58ad02;
+}
+
+.cube:nth-child(13) .front {
+  background-color: #6cd503;
+}
+
 
