--- a/projects/p2/assets/css/mains.css
+++ b/projects/p2/assets/css/mains.css
@@ -9,7 +9,7 @@ div, :before, :after {
   top: 150px;
   left: 70px;
   
-          transform-style: preserve-3d;
+  transform-style: preserve-3d;
   background: currentColor;
 }
 .cube {
@@ -18,9 +18,23 @@ div, :before, :after {
   height: 20px;
   -webkit-transform: translateZ(1em);
           transform: translateZ(1em);
- 
+  transform-origin: 50% 50% -1.5625em;
+  box-shadow: 0 0 .4em currentColor;
+  transition: all 200ms ease;
 }
 
+  
+
+
+.a .hover{
+  animation: s 0.6s cubic-bezier(0.45, 0.03, 0.51, 0.95) infinite alternate;
+
+}
+@keyframes s {
+  to {
+    transform: scale3d(0.2, 0.2, 0.2);
+  }
+}
 
 .cube:before, .cube:after {
   width: inherit;
@@ -50,6 +64,7 @@ div, :before, :after {
           filter: brightness(1.3);
 }
 .assembly {
+  background-color: 
   -webkit-transform: rotateX(-15deg) rotateY(-45deg) ;
           transform: rotateX(-15deg) rotateY(-45deg);
 
@@ -3367,5 +3382,220 @@ p{
  color: #feac54;
 }
 
+.boxset{
 
+  margin-top: -80px;
+  margin-left: 50px;
+  width: 150px;
+  height: 150px;
+  background-color: #252527;
+}
+.box{
+  margin-top: -80px;
+  margin-left: 200px;
+  width: 150px;
+  height: 150px;
+  float: left;
+  background-color: #252527;
+}
+.bbox{
+  margin-top: -70px;
+  margin-left: 350px;
+  width: 155px;
+  height: 150px;
+  background-color: #252527;
+}
+.bbbox{
+  margin-left: 505px;
+  margin-top: -80px;
+  width: 160px;
+  height: 150px;
+  background-color: #252527;
+}
+.ex{
+  margin-left: 665px;
+  margin-top: -80px;
+  width: 165px;
+  background-color: #252527;
+  height: 150px;
+}
+.fx{
+  margin-left: 821px;
+  margin-top: -80px;
+  width: 165px;
+  height: 150px;
+  background-color: #252527;
+}
+.gx{
+  margin-left: 986px;
+  margin-top: -80px;
+  width: 150px;
+  height: 150px;
+  background-color: #252527;
+}
+.hx {
+  margin-left: 1136px;
+  margin-top: -80px;
+  width: 145px;
+  height: 150px;
+  background-color: #252527;
+}
 
+.ix{
+
+  margin-top: 70px;
+  margin-left: 50px;
+  width: 150px;
+  height: 190px;
+  background-color: #252527;
+}
+.jx{
+  margin-top: 70px;
+  margin-left: 200px;
+  width: 150px;
+  height: 190px;
+  background-color: #252527;
+}
+.kx{
+  margin-top: 70px;
+  margin-left: 350px;
+  width: 155px;
+  height: 190px;
+  background-color: #252527;
+}
+.lx{
+  margin-left: 505px;
+  margin-top: 70px;
+  width: 160px;
+  height: 190px;
+  background-color: #252527; 
+}
+.mx{
+  margin-left: 665px;
+  margin-top: 70px;
+  width: 250px;
+  background-color: #252527;
+  height: 190px;
+}
+.nx{
+  margin-left: 915px;
+  margin-top: 70px;
+  width: 195px;
+  height: 190px;
+  background-color: #252527;
+}
+.ox{
+  margin-left: 1110px;
+  margin-top: 70px;
+  width: 160px;
+  height: 190px;
+  background-color: #252527;
+}
+.px {
+  margin-left: 50px;
+  margin-top: 260px;
+  width: 150px;
+  height: 180px;
+  background-color: #252527;
+}
+.qx{
+  margin-top: 260px;
+  margin-left: 200px;
+  width: 150px;
+  height: 180px;
+  background-color: #252527;
+}
+.rx{
+  margin-top: 260px;
+  margin-left: 350px;
+  width: 160px;
+  height: 180px;
+  background-color: #252527;
+}
+.sx{
+  margin-left: 510px;
+  margin-top: 260px;
+  width: 160px;
+  height: 180px;
+  background-color: #252527; 
+}
+.tx{
+  margin-left: 670px;
+  margin-top: 260px;
+  width: 160px;
+  background-color:  #252527;
+  height: 180px;
+}
+.ux{
+  margin-left: 830px;
+  margin-top: 260px;
+  width: 160px;
+  background-color:  #252527;
+  height: 180px;
+}
+.vx{
+  margin-left: 990px;
+  margin-top: 260px;
+  width: 160px;
+  background-color: #252527;
+  height: 180px;
+}
+.wx{
+  margin-left: 50px;
+  margin-top: 440px;
+  width: 220px;
+  background-color: #252527;
+  height: 180px;
+}
+.xx{
+  margin-left: 270px;
+  margin-top: 440px;
+  width: 160px;
+  background-color: #252527;
+  height: 180px;
+}
+.yx{
+  margin-left: 430px;
+  margin-top: 440px;
+  width: 160px;
+  background-color: #252527;
+  height: 180px;
+}
+.zx{
+  margin-left: 590px;
+  margin-top: 440px;
+  width: 160px;
+  background-color: #252527;
+  height: 180px;
+}
+.ques{
+  margin-left: 750px;
+  margin-top: 440px;
+  width: 160px;
+  background-color: #252527;
+  height: 180px;
+}
+.excla{
+  margin-left: 910px;
+  margin-top: 440px;
+  width: 80px;
+  background-color: #252527;
+  height: 180px;
+}
+.menu{
+  margin-top: 0px;
+  left:30px;
+  -webkit-transform: rotateX(-15deg) rotateY(-45deg);
+          transform: rotateX(-15deg) rotateY(-45deg);
+}
+.menu > :nth-child(2n + 1) {
+  top: calc(50% + -6em);
+  color: #feac54;
+  
+}
+
+.menu > :nth-child(2n + 2) {
+  top: calc(50% + -4em);
+  color: #feac54;
+ 
+}
