--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,126 @@
 body{
-	background-color: #f2f2f2;
+	background-color: #16181c;
+	width: 96%;
+	height: 100%;
+	font-family: 'Karla', sans-serif;
 } 
 .main{
-	margin-top: 50pt;
-
+	width: 100%;
+	height: 100%;
+	/*background-color: grey;*/
 	font-family: 'Karla', sans-serif;
-	color: #000000;
-	margin-left: 20pt;
+	margin-left: 2%;
 	
 }
-p{
-	font-size: 25pt;
+.min{
+	color: #bc9740;
+	font-size: 550% ;
+	font-weight: bold;
+	margin-left: 8.5%;
+	margin-top: 4.4%;
+}
+
+.interactive{
+	font-size: 100%;
+	color: #bc9740;
+	margin-top: -0.7%;
+	margin-left: 9%;
+}
+hr { 
+	width:10%; 
+	color: #bc9740;
+	background-color: #bc9740; 
+}
+.projects{
+	margin-top: 6%;
+}
+.first,.second,.third{
+
+	width: 80%;
+	text-align: center;
+}
+
+#first,#second,#third{
+
+	color: #d4d4d6;
+	font-size: 500%;
+	margin-left: 25%;
+	text-align: center;
+}
+#first:link{
+	text-decoration: none;
+}
+#first:visited {
+    text-decoration: none;
+}
+
+#first.green:hover,#second.green:hover,#third.green:hover,#f.green:hover,#s.green:hover { color: #1ace84; }
+#first.purple:hover,#second.purple:hover,#third.purple:hover,#f.purple:hover,#s.purple:hover { color: #a262c0; }
+#first.teal:hover,#second.teal:hover,#third.teal:hover, #f.teal:hover,#s.teal:hover{ color: #4ac0aa; }
+#first.violet:hover,#second.violet:hover,#third.violet:hover,#f.violet:hover,#s.violet:hover { color: #8c78ba; }
+#first.yellow:hover,#second.yellow:hover,#third.yellow:hover,#f.yellow:hover,#s.yellow:hover { color: yellow;}
+#first.pink:hover,#second.pink:hover,#third.pink:hover,#f.pink:hover,#s.pink:hover { color: #d529cd; }
+#first.hotpink:hover,#second.hotpink:hover,#third.hotpink:hover,#f.hotpink:hover,#s.hotpink:hover{color:hotpink;}
+#first.coral:hover,#second.coral:hover,#third.coral:hover,#f.coral:hover,#s.coral:hover {color:#f42738;}
+
+#second:link{
+	text-decoration: none;
+}
+#second:visited {
+    text-decoration: none;
+}
+
+
+#third:link{
+	text-decoration: none;
+}
+#third:visited {
+    text-decoration: none;
+}
+
+
+
+.p,.e{
+	text-align: center;
+	margin-bottom: 1%;
+	color: #bc9740;
+	
 
 }
-.second{
+#exercises{
+	margin-top: 2%;
 	
 }
+.e{
+	color: #bc9740;
+}
+.exe{
+
+	width: 80%;
+	text-align: center;
+	margin-left: 10%;
+}
+
+#f, #s{
+
+	color: #d4d4d6;
+	font-size: 100%;
+	padding: 1%;
+	
+	text-align: center;
+}
+
+#f:link, #s:link{
+	text-decoration: none;
+}
+#f:visited,#s:visited {
+    text-decoration: none;
+}
+#f:hover {
+    color: #02b7ff;
+}
+
+#s:hover {
+    color: #1df2c0;
+}
+
